gwt:run needs more permgen space
git-svn-id: https://svn.geomajas.org/geosparc/projects/ktunaxa@1306 cebd4ea5-dd72-4036-80b6-269358829854