@@ -254,7 +254,7 @@
 				<configuration>
 					<disableCastChecking>true</disableCastChecking>
 					<disableClassMetadata>true</disableClassMetadata>
-					<extraJvmArgs>-Xmx1500M -Xss1024k</extraJvmArgs>
+					<extraJvmArgs>-Xmx1500M -Xss1024k -XX:MaxPermSize=128M</extraJvmArgs>
 					<module>org.ktunaxa.referral.KtunaxaEntryPoint</module>
 					<runTarget>index.html</runTarget>
 					<hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
